# avro-helper

./: .gitignore  Cargo.toml  README.MD
avro_utils/: Cargo.toml  README.md
avro_utils/src/: avro_lens.rs  lib.rs
avro_utils/test_data/: data_generating.txt
avro_utils/test_data/avro/deflate/: part-00000-8ca30d4a-cadf-4984-acdc-5a8e8627c210-c000.avro
avro_utils/test_data/avro/snappy/: part-00000-e18a8bb9-401f-4d2c-a89c-21de4a57106f-c000.avro
avro_utils/test_data/avro/uncompressed/: part-00000-cdb31271-7aba-45f8-baf5-57cb827b8a0d-c000.avro
avro_utils/tests/: avro_lens_test.rs
search_lambda/: Cargo.toml  README.MD
search_lambda/src/: avro_filter.rs  aws_util.rs  http_router.rs  lambda_env.rs  main.rs  s3_util.rs  string_util.rs
