[workspace]
members = ["avro_utils", "search_lambda"]

[workspace.dependencies]
apache-avro = { version = "=0.16.0" }
lazy_static = "1.4.0"

bytes = "1.6.0"
base64 = "0.22.0"
url = "2.5.0"
aws-config = "^1.1.8"
aws-sdk-s3 = "^1.20.0"
lambda_runtime = "0.10.0"
serde = "^1.0.197"
serde_json = "^1.0.114"
tokio = "1"
tokio-scoped = "0.2.0"
async-recursion = "^1.1.0"
futures = "^0.3.30"
tracing = "^0.1.40"
tracing-subscriber = "^0.3.18"
cached = "0.49.2"